rewards image fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -887,7 +887,14 @@ minify CSS at the end to better performance
     width: 110px;
   }
 
+  /*---------------------------------------
+      REWARDS             
+  -----------------------------------------*/
 
+  #rewards img{
+    height: 300px;
+    width: auto;
+  }
 
   /*---------------------------------------
       CONTACTS             
@@ -922,7 +929,6 @@ minify CSS at the end to better performance
     width: 800px;
     height: 500px;
   }
-
 
 
   /*---------------------------------------
@@ -1193,6 +1199,11 @@ minify CSS at the end to better performance
 
     #menu .mobimg{
       display: block;
+    }
+
+    #rewards img{
+      height: auto;
+      width: 100%;
     }
 
     #join img{
